# Peripheral

./: .gitignore  CCRL Rating Estimate.txt  Cargo.toml  README.md  test_positions.json
benches/: bench.rs
src/: chess.rs  lib.rs  main.rs  uci.rs
src/chess/: board.rs  castling_flags.rs  chess_engine.rs  chess_move.rs  eval.rs  grade.rs  move_gen.rs  move_list.rs  perft.rs  piece_type.rs  precomputed.rs  util.rs
src/chess/board/: history.rs  make_move.rs  parse_fen.rs  undo_move.rs  zobrist.rs
src/chess/chess_engine/: search.rs
src/chess/chess_engine/search/: transposition_table.rs
src/chess/eval/: piece_square.rs
src/chess/move_gen/: magics.rs  move_verification.rs
